# pod-protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
blink-api/: README.md  package-lock.json  package.json
blink-api/public/: actions.json
blink-api/src/app/: globals.css  layout.tsx  page.tsx
blink-api/src/app/api/actions/claim-refund/: route.ts
blink-api/src/app/api/actions/create-dare/: route.ts
blink-api/src/app/api/actions/resolve-dare/: route.ts
blink-api/src/app/api/actions/submit-proof/: route.ts
blink-api/src/app/api/analyze-video/: route.ts
blink-api/src/app/api/auth/callback/twitter/: route.ts
blink-api/src/app/api/auth/twitter/: route.ts
blink-api/src/app/api/rpc/: route.ts
blink-api/src/components/: PrivyProvider.tsx  WalletContextProvider.tsx
blink-api/src/lib/: solana.ts  supabase.ts
programs/proof_of_dare/: Cargo.toml
programs/proof_of_dare/src/: lib.rs  new_id.json
tests/: proof_of_dare.ts
